[package]
name = "cache"
version = "0.1.0"
authors = ["Dan Bruder <danb@structionsite.com>"]
edition = "2018"

[dependencies]
sled = "0.34.4"
rocket = { git = "https://github.com/SergioBenitez/Rocket", branch = "master"}
rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket", branch = "master"}
bincode = "1.3.1"
